welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:5: error: '(' expected but identifier found.
  for compt(<-1 to 5){
      ^